Color changes + Award link updates

--- a/src/pages/2024/attend/registration.mdx
+++ b/src/pages/2024/attend/registration.mdx
@@ -43,10 +43,10 @@ Please pay attention to ticket deadlines, as they are **significantly earlier** 
 <Tab.Group>
 <Tab.List className='z-10 flex mt-4 py-1 sm:py-2 sticky top-[87px] sm:top-[63px] flex space-x-1 bg-primary border-b border-text-color'>
 <span className='grow'>
-<Tab className={({selected}) => (`${selected ? `text-white bg-green-700 border-nav-green/90` : `dark:text-white text-nav-green bg-green-300/25 border-nav-green/90 hover:bg-green-500/30 border-nav-green/60`} font-semibold border focus:outline-none focus:ring-nav-green/70 focus:ring-1 focus-visible:ring-2 transition text-sm sm:text-base rounded px-2 md:px-3 mr-1 md:mr-3 py-0.5 md:py-1`)}>Collegiate</Tab>
-<Tab className={({selected}) => (`${selected ? `text-white bg-blue-700 border-nav-blue/90` : `dark:text-white text-nav-blue bg-blue-300/25 border-nav-blue/90 hover:bg-blue-500/30 border-nav-blue/60`} font-semibold border focus:outline-none focus:ring-nav-blue/70 focus:ring-1 focus-visible:ring-2 transition text-sm sm:text-base rounded px-2 md:px-3 mr-1 md:mr-3 py-0.5 md:py-1`)}>Professional</Tab>
-<Tab className={({selected}) => (`${selected ? `text-white bg-purple-700 border-nav-purple/90` : `dark:text-white text-nav-purple bg-purple-300/25 border-nav-purple/90 hover:bg-purple-500/30 border-nav-purple/60`} font-semibold border focus:outline-none focus:ring-nav-purple/70 focus:ring-1 focus-visible:ring-2 transition text-sm sm:text-base rounded px-2 md:px-3 mr-1 md:mr-3 py-0.5 md:py-1`)}>Expo Only</Tab>
-<Tab className={({selected}) => (`${selected ? `text-white bg-purple-700 border-nav-purple/90` : `dark:text-white text-nav-purple bg-purple-300/25 border-nav-purple/90 hover:bg-purple-500/30 border-nav-purple/60`} font-semibold border focus:outline-none focus:ring-nav-purple/70 focus:ring-1 focus-visible:ring-2 transition text-sm sm:text-base rounded px-2 md:px-3 mr-1 md:mr-3 py-0.5 md:py-1`)}>Exhibitor / Sponsor</Tab>
+<Tab className={({selected}) => (`${selected ? `text-white bg-emerald-600 border-nav-emerald/90` : `dark:text-white text-nav-emerald bg-emerald-300/25 hover:bg-emerald-500/35 border-emerald-500/40`} font-semibold border focus:outline-none focus:ring-emerald-500/70 focus:ring-1 focus-visible:ring-2 transition text-base rounded px-2 md:px-3 mr-2 md:mr-3 py-0.5 md:py-1 my-1 sm:mt-0`)}>Collegiate</Tab>
+<Tab className={({selected}) => (`${selected ? `text-white bg-lime-600 border-nav-lime/90` : `dark:text-white text-nav-lime bg-lime-300/25 hover:bg-lime-500/35 border-lime-500/40`} font-semibold border focus:outline-none focus:ring-lime-500/70 focus:ring-1 focus-visible:ring-2 transition text-base rounded px-2 md:px-3 mr-2 md:mr-3 py-0.5 md:py-1 my-1 sm:mt-0`)}>Professional</Tab>
+<Tab className={({selected}) => (`${selected ? `text-white bg-amber-600 border-nav-yellow/90` : `dark:text-white text-nav-yellow bg-yellow-300/25 hover:bg-yellow-500/35 border-yellow-500/40`} font-semibold border focus:outline-none focus:ring-yellow-500/70 focus:ring-1 focus-visible:ring-2 transition text-base rounded px-2 md:px-3 mr-2 md:mr-3 py-0.5 md:py-1 my-1 sm:mt-0`)}>Expo Only</Tab>
+<Tab className={({selected}) => (`${selected ? `text-white bg-purple-700 border-nav-purple/90` : `dark:text-white text-nav-purple bg-purple-300/25 border-nav-purple/90 hover:bg-purple-500/30 border-nav-purple/60`} font-semibold border focus:outline-none focus:ring-nav-purple/70 focus:ring-1 focus-visible:ring-2 transition text-base rounded px-2 md:px-3 mr-2 md:mr-3 py-0.5 md:py-1 my-1 sm:mt-0`)}>Exhibitor / Sponsor</Tab>
 </span>
 </Tab.List>
 <Tab.Panels className='sm:px-3 py-2'>
@@ -141,8 +141,8 @@ Attendees with an accepted [Request for Programs (RFP)](/2024/present/request-fo
 
 Your submission decision will likely come after June 30. As a thank you for submitting a proposal, we will honor the early bird rate anytime before the September 30 regular cut off. You will receive instructions for this with your decision email.
 
-#### I missed the early-bird deadline. Can I still get the early-bird rate?
-If you submitted a RFP or RFPT (see above), you will still be able to register at the early-bird rate after it closes. No other exceptions will be made.
+#### What if I miss the early-bird deadline for any other reason?
+We are only offering extended early-bird registration for attendees who have submitted a RFP or RFPT (see above). No other exceptions will be made.
 
 <br/>
 
