--- a/src/pages/2024/awards/awards-chapter-leader.mdx
+++ b/src/pages/2024/awards/awards-chapter-leader.mdx
@@ -34,11 +34,8 @@ Self-nominations are accepted and encouraged. If you have any questions
 regarding this application, please contact us at membership@ostem.org.
 
 <br />
-<div align="center">
-  <AwardCardButton url="https://form.jotform.com/231425712400341">
-    Nominate Someone for this Award
-  </AwardCardButton>
-</div>
+
+To make a nomination, please head to [the main Awards page for nomination forms](.#chapter-awards).
 
 </div>
 
