--- a/src/pages/2024/awards/awards-rookie-chapter.mdx
+++ b/src/pages/2024/awards/awards-rookie-chapter.mdx
@@ -29,11 +29,8 @@ Please only submit one nomination per chapter. If you have any questions
 regarding this application, please contact us at membership@ostem.org.
 
 <br />
-<div align="center">
-  <AwardCardButton url="https://form.jotform.com/231424895247361">
-    Nominate Someone for this Award
-  </AwardCardButton>
-</div>
+
+To make a nomination, please head to [the main Awards page for nomination forms](.#chapter-awards).
 
 </div>
 
