--- a/src/pages/2024/awards/awards-strategic-alliance.mdx
+++ b/src/pages/2024/awards/awards-strategic-alliance.mdx
@@ -30,11 +30,8 @@ per organization. If you have any questions regarding this application, please
 contact us at sponsorship@ostem.org.
 
 <br />
-<div align="center">
-  <AwardCardButton url="https://forms.gle/hinfb8nJgr3TxDsa7">
-    Nominate Someone for this Award
-  </AwardCardButton>
-</div>
+
+To make a nomination, please head to [the main Awards page for nomination forms](.#sponsor-awards).
 
 </div>
 
