--- a/src/pages/2024/awards/awards-partner-excellence.mdx
+++ b/src/pages/2024/awards/awards-partner-excellence.mdx
@@ -30,11 +30,8 @@ Self-nominations are accepted and encouraged. If you have any questions
 regarding this application, please contact us at sponsorship@ostem.org.
 
 <br />
-<div align="center">
-  <AwardCardButton url="https://forms.gle/hpQSZyGk4iJNGXoBA">
-    Nominate Someone for this Award
-  </AwardCardButton>
-</div>
+
+To make a nomination, please head to [the main Awards page for nomination forms](.#sponsor-awards).
 
 </div>
 
