Update landing page

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -25,12 +25,14 @@ import { SiteLayout } from "../components/layout/SiteLayout";
       <p className="p-4">
         <b>Request for Proposals:</b> May 31, 2024 <br />
         <b>Request for Panel Topics:</b> May 31, 2024 <br />
-        <b>Early Bird Registration:</b> TBD <br />
+        <b>Early Bird Registration:</b> June 30, 2024 <br />
       </p>
-      <p className='p-4'>Requests for programs and panel topics are now open.</p>
+      <p className='p-4'>Registration opens on June 1! All deadlines close at 11:59 PM EDT.</p>
       <div className="text-xl text-center p-2">
-          <CTAButton onClick="/2024/present/request-for-programs" backgroundColor="ostem-blue" target='_self'> Submit a Proposal</CTAButton>
+          
+          <CTAButton onClick="/2024/attend/registration" backgroundColor="bright-peach" target='_self'> Registration Info</CTAButton>
           <br/><br/>
+          <CTAButton onClick="/2024/present/request-for-programs" backgroundColor="ostem-blue" target='_self'> Submit a Proposal</CTAButton> &nbsp;
           <CTAButton onClick="/2024/present/request-for-panel-topics" backgroundColor="ostem-blue" target='_self'> Submit a Panel Topic</CTAButton>
       </div>
     </div>
