Hotfix: Pricing typo

--- a/src/pages/2024/attend/registration.mdx
+++ b/src/pages/2024/attend/registration.mdx
@@ -79,7 +79,7 @@ Please pay attention to ticket deadlines, as they are **significantly earlier** 
   </Tab.Panel>
   <Tab.Panel>
     <p>If your company has an exhibitor or sponsorship package, please reach out to your company's conference contact for registration instructions. Tickets included with a package cannot be purchased from this page.</p>
-    <p><b>Do not purchase a ticket from this website unless oSTEM explicitly tells you to.</b></p>
+    <p><b className='text-purple-700 dark:text-purple-300'>Do not purchase a ticket from this website unless oSTEM explicitly tells you to.</b></p>
     <p>If you have additional questions regarding this, please contact <a href='mailto:sponsorship@ostem.org'>sponsorship@ostem.org</a>.</p>
   </Tab.Panel>
 </Tab.Panels>
