--- a/src/pages/2024/attend/registration.mdx
+++ b/src/pages/2024/attend/registration.mdx
@@ -40,6 +40,8 @@ Please pay attention to ticket deadlines, as they are **significantly earlier** 
 
 <p><b className='text-red-600 dark:text-red-300'>All online ticket sales will close on September 30 at 11:59 PM EST.</b> No exceptions will be made. If you miss the online ticket window, you may purchase tickets on-site for an additional cost. Please note that on-site tickets do not come with any food vouchers. Additionally, accommodations will be extremely limited due to the short turnaround.</p>
 
+<p><b className='text-orange-700 dark:text-yellow-200'>Please submit accommodation requests by August 31.</b> You may request accomodations either during online registration or by emailing <a href='mailto:access@ostem.org'>access@ostem.org</a>. After August 31, our ability to provide accommodations will be more limited.</p>
+
 <Tab.Group>
 <Tab.List className='z-10 flex mt-4 py-1 sm:py-2 sticky top-[87px] sm:top-[63px] flex space-x-1 bg-primary border-b border-text-color'>
 <span className='grow'>
