--- a/src/pages/2024/attend/schedule.mdx
+++ b/src/pages/2024/attend/schedule.mdx
@@ -60,7 +60,7 @@ All times and events listed below are **tentative** and are subject to change.
 - **2:30 PM - 3:30 PM:** Poster Presentation 2
 - **4:00 PM - 5:00 PM:** Workshop Block 5
 - **5:00 PM - 6:30 PM:** Evening Networking Receptions (Sponsored)
-- **7:30 PM - 9:00 PM:** oSTEM Ga(y)la\*\*
+- **7:30 PM - 9:00 PM:** oSTEM Gala\*\*
 
 \*\* oSTEM Ga(y)la tickets are a paid add-on during registration.
 
