--- a/src/pages/2024/attend/schedule.mdx
+++ b/src/pages/2024/attend/schedule.mdx
@@ -62,7 +62,7 @@ All times and events listed below are **tentative** and are subject to change.
 - **5:00 PM - 6:30 PM:** Evening Networking Receptions (Sponsored)
 - **7:30 PM - 9:00 PM:** oSTEM Gala\*\*
 
-\*\* oSTEM Ga(y)la tickets are a paid add-on during registration.
+\*\* oSTEM Gala tickets are a paid add-on during registration.
 
 <div className="text-nav-purple">
 
