index: Remove ticket alert

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -27,7 +27,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
         <b>Request for Panel Topics:</b> May 31, 2024 <br />
         <b>Early Bird Registration:</b> June 30, 2024 <br />
       </p>
-      <p className='p-4'>Registration opens on June 1! All deadlines close at 11:59 PM EDT.</p>
+      <p className='p-4'>Registration is open! All deadlines close at 11:59 PM EDT.</p>
       <div className="text-xl text-center p-2">
           
           <CTAButton onClick="/2024/attend/registration" backgroundColor="bright-peach" target='_self'> Registration Info</CTAButton>
@@ -42,14 +42,10 @@ import { SiteLayout } from "../components/layout/SiteLayout";
     <h3 className="p-4 pt-3">14<sup>th</sup> Annual Conference in Portland, OR</h3>
     <div className='bg-primary rounded'>
       <p className="p-4">
-        We hope you will join us next year at the beautiful Oregon Convention Center in Portland, OR from October 17-20, 2024! To receive an email when tickets for oSTEM 2024 go on sale, please fill out this form.  
+        We hope you will join us this year at the beautiful <b>Oregon Convention Center in Portland, OR</b> from October 17-20, 2024.
         <br />
+        Online registration is open now until September 30. Register in June for an early-bird discount!
       </p>
-      <div className="text-xl flex justify-center p-2 pb-4">
-        <CTAButton onClick="https://form.jotform.com/232986540358062" backgroundColor="bright-peach">
-          oSTEM 2024 Ticket Alert
-        </CTAButton>
-      </div>
     </div>
   </div>
 
