--- a/src/pages/2024/attend/attendee-resources.mdx
+++ b/src/pages/2024/attend/attendee-resources.mdx
@@ -2,7 +2,7 @@ import { CTAButton } from "@/components/button/CTAButton";
 import { SiteLayout } from "@/components/layout/SiteLayout";
 import { TopicSquare } from "@/components/rfp/TopicSquare";
 import { FontAwesomeIcon } from "@fortawesome/react-fontawesome";
-import { faCar, faPlane, faTrain } from '@fortawesome/free-solid-svg-icons';
+import { faCar, faHotel, faPlane, faTrain } from '@fortawesome/free-solid-svg-icons';
 import Image from "next/image";
 
 <SiteLayout title="Attendee Resources" accent="purple">
@@ -62,9 +62,40 @@ If you're driving and need parking, please refer to [the OCC website for detaile
 
 </div>
 
-We will publish hotel information as soon as we're finalized on our end. Expect hotels under the oSTEM rate to be approximately $200-$240/room/night + taxes and fees.
+<h4 className='text-green-900 dark:text-green-100'>General Lodging Information</h4>
+
+To accomodate the increasing number of attendees each year, we are excited to announce that for the first time ever we are offering <b>multiple discounted hotels</b> this year. Because of this, please note the following:
+
+- There are three general hotels that can be reserved by any attendee.
+  - All hotels are within 5 blocks of both the convention center and the light rail station.
+  - A limited, private hotel block which is adjacent to the convention center is available for attendees who need to be closer for accessibility and/or mobility reasons. If you need this, contact conference@ostem.org. 
+- Hotel blocks are first come, first served.
+  - This page will be updated weekly to indicate remaining capacity at each hotel. Once a hotel is full, you will not be able to make any reservations under our block rate and must instead pick a different hotel.
+  - Blocks may run out before we update this website. If no rooms are available for a particular link, then that hotel block is **full**.
 
 <br/>
+<h4 className='text-green-900 dark:text-green-100'>Conference Hotels</h4>
 
+<div className='flex flex-col md:flex-row gap-x-4'>
+<div className='w-full'>
+<h3 className='text-green-900 dark:text-green-100'><FontAwesomeIcon icon={faHotel} className={"social-icon"} fixedWidth /> DoubleTree</h3>
 
+Boo
+
+</div>
+<div className='w-full'>
+<h3 className='text-green-900 dark:text-green-100'><FontAwesomeIcon icon={faHotel} className={"social-icon"} fixedWidth /> Courtyard</h3>
+
+Boo
+
+</div>
+<div className='w-full'>
+<h3 className='text-green-900 dark:text-green-100'><FontAwesomeIcon icon={faHotel} className={"social-icon"} fixedWidth /> Crowne Plaza</h3>
+
+Boo
+
+</div>
+</div>
+
+<br/>
 </SiteLayout>
