hotel info commit

--- a/src/pages/2024/attend/attendee-resources.mdx
+++ b/src/pages/2024/attend/attendee-resources.mdx
@@ -58,41 +58,78 @@ If you're driving and need parking, please refer to [the OCC website for detaile
 
 <div className="text-nav-green font-bold">
 
-### Lodging
+## Lodging
 
 </div>
 
-<h4 className='text-green-900 dark:text-green-100'>General Lodging Information</h4>
+### General Lodging Information
 
-To accomodate the increasing number of attendees each year, we are excited to announce that for the first time ever we are offering <b>multiple discounted hotels</b> this year. Because of this, please note the following:
+To accomodate the increasing number of attendees each year, we are excited to announce that for the first time ever we are offering <b>multiple discounted hotels</b> this year. These hotels have discounted group rates available exclusively for attendees, and are all located close to both the light rail station and the convention center. Because we have multiple hotels this year, please note the following:
 
 - There are three general hotels that can be reserved by any attendee.
   - All hotels are within 5 blocks of both the convention center and the light rail station.
-  - A limited, private hotel block which is adjacent to the convention center is available for attendees who need to be closer for accessibility and/or mobility reasons. If you need this, contact conference@ostem.org. 
+  - We have a limited block for a fourth hotel adjacent to the convention center. This hotel costs slightly more ($239/night) and is only available for attendees who need to be closer for accessibility and/or mobility reasons. If you need this, contact access@ostem.org. 
 - Hotel blocks are first come, first served.
   - This page will be updated weekly to indicate remaining capacity at each hotel. Once a hotel is full, you will not be able to make any reservations under our block rate and must instead pick a different hotel.
+  - While you can book rooms for Tuesday through Monday, most of our block is for Thursday through Sunday. Availability for other nights is more limited.
   - Blocks may run out before we update this website. If no rooms are available for a particular link, then that hotel block is **full**.
 
 <br/>
-<h4 className='text-green-900 dark:text-green-100'>Conference Hotels</h4>
+
+### Conference Hotels
+
+The hotels listed below are all **first come, first served**. Hotels may be booked until they're full or by September 24th, 2024, whichever comes first. Once a hotel block is full, it will be removed from this page. All hotels have a 17% charge for taxes and fees.
 
 <div className='flex flex-col md:flex-row gap-x-4'>
 <div className='w-full'>
-<h3 className='text-green-900 dark:text-green-100'><FontAwesomeIcon icon={faHotel} className={"social-icon"} fixedWidth /> DoubleTree</h3>
+<h3>DoubleTree</h3>
+<hr className='border-red-400 border-b-2 rounded'/>
 
-Boo
+**DoubleTree by Hilton Portland**
+
+<p><span className='text-red-800 dark:text-red-200'>1000 NE Multnomah, Portland, OR 97232</span>
+<br/>(5 blocks to OCC, 1 block to Light Rail)</p>
+
+Price: $199/day + Taxes
+
+<a target='_blank' href='https://www.hilton.com/en/book/reservation/rooms/?ctyhocn=RLLC-DT&arrivalDate=2024-10-16&departureDate=2024-10-20&groupCode=CDTOST&room1NumAdults=1&cid=OM%2CWW%2CHILTONLINK%2CEN%2CDirectLink' className='border-red-400 text-red-800 dark:text-red-200 border-2 px-2 pt-0.5 pb-1 mt-4 inline-block hover:bg-gray-400/25 transition focus-visible:bg-gray-500/30'>
+  Book DoubleTree
+</a>
+
+
 
 </div>
 <div className='w-full'>
-<h3 className='text-green-900 dark:text-green-100'><FontAwesomeIcon icon={faHotel} className={"social-icon"} fixedWidth /> Courtyard</h3>
+<h3>Courtyard</h3>
+<hr className='border-pink-400 border-b-2 rounded'/>
 
-Boo
+**Courtyard Portland Downtown Convention Center**
+
+<p><span className='text-pink-800 dark:text-pink-200'>435 NE Wasco St, Portland, Oregon 97232</span>
+<br/>(2 blocks to OCC, 2 blocks to Light Rail)</p>
+
+Price: $209/day + Taxes
+
+
+<a target='_blank' href='https://www.marriott.com/event-reservations/reservation-link.mi?id=1695847220664&key=GRP&app=resvlink' className='border-pink-400 text-pink-800 dark:text-pink-200 border-2 px-2 pt-0.5 pb-1 mt-4 inline-block hover:bg-gray-400/25 transition focus-visible:bg-gray-500/30'>
+  Book Courtyard
+</a>
 
 </div>
 <div className='w-full'>
-<h3 className='text-green-900 dark:text-green-100'><FontAwesomeIcon icon={faHotel} className={"social-icon"} fixedWidth /> Crowne Plaza</h3>
+<h3>Crowne Plaza</h3>
+<hr className='border-indigo-400 border-b-2 rounded'/>
 
-Boo
+**Crowne Plaza Portland Downtown Convention Center**
+
+<p><span className='text-indigo-800 dark:text-indigo-200'>1441 NE 2nd Ave, Portland, OR 97232</span>
+<br/>(4 blocks to OCC, 4 blocks to Light Rail)</p>
+
+Price: $212/day + Taxes
+
+<a target='_blank' href='https://book.passkey.com/go/oSTEM24' className='border-indigo-400 text-indigo-800 dark:text-indigo-200 border-2 px-2 pt-0.5 pb-1 mt-4 inline-block hover:bg-gray-400/25 transition focus-visible:bg-gray-500/30'>
+  Book Crowne Plaza
+</a>
 
 </div>
 </div>
