--- a/src/pages/2024/attend/attendee-resources.mdx
+++ b/src/pages/2024/attend/attendee-resources.mdx
@@ -64,15 +64,14 @@ If you're driving and need parking, please refer to [the OCC website for detaile
 
 ### General Lodging Information
 
-To accomodate the increasing number of attendees each year, we are excited to announce that for the first time ever we are offering <b>multiple discounted hotels</b> this year. These hotels have discounted group rates available exclusively for attendees, and are all located close to both the light rail station and the convention center. Because we have multiple hotels this year, please note the following:
+To accomodate the increasing number of attendees each year, we are excited to announce that for the first time ever we are offering <b>multiple hotel blocks</b> this year. These hotels have discounted group rates available exclusively for attendees, and are all located close to both the light rail station and the convention center. Because we have multiple hotels this year, please note the following:
 
 - There are three general hotels that can be reserved by any attendee.
   - All hotels are within 5 blocks of both the convention center and the light rail station.
-  - We have a limited block for a fourth hotel adjacent to the convention center. This hotel costs slightly more ($239/night) and is only available for attendees who need to be closer for accessibility and/or mobility reasons. If you need this, contact access@ostem.org. 
+  - Limited rooms are available in a hotel adjacent to the convention center for those with accessibility and/or mobility concerns.  For more information on costs and availability please contact access@ostem.org. 
 - Hotel blocks are first come, first served.
-  - This page will be updated weekly to indicate remaining capacity at each hotel. Once a hotel is full, you will not be able to make any reservations under our block rate and must instead pick a different hotel.
-  - While you can book rooms for Tuesday through Monday, most of our block is for Thursday through Sunday. Availability for other nights is more limited.
-  - Blocks may run out before we update this website. If no rooms are available for a particular link, then that hotel block is **full**.
+  - This page will be updated weekly to indicate remaining capacity at each hotel. Once a hotel is full, you will not be able to make any reservations under our block.
+  - Reservations are available for booking Tuesday October, 15th through Monday October, 21st. Please note that Tuesday, Wednesday, and Sunday night availability is limited.
 
 <br/>
 
